plexpy/plexpy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plexpy
  labels:
    app: plexpy
spec:
  ports:
  - port: 8181
    targetPort: 8181
    protocol: TCP
    name: http
  selector:
    app: plexpy
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: plexpy
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: plexpy
    spec:
      containers:
      - name: plexpy
        image: linuxserver/plexpy
        ports:
        - containerPort: 8181
        volumeMounts:
          - mountPath: "/config"
            name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: plexpy-config
