plexpy/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: plexpy
  labels:
    k8s-app: plexpy
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "plexpy.k.oneill.net"
      http:
        paths:
          - path: /
            backend:
              serviceName: plexpy
              servicePort: 8181
